--- a/learn-certs-pr/azure-solutions-architect.yml
+++ b/learn-certs-pr/azure-solutions-architect.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Azure Solutions Architect Expert'
 metadata:
   title: 'Microsoft Certified: Azure Solutions Architect Expert'
-  description: 'Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.'
+  description: «Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.»
 uid: certification.azure-solutions-architect
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
@@ -12,24 +12,22 @@ summary: |-
 
   Обязанности этой роли включают консультирование заинтересованных сторон и перевод требований бизнеса в безопасные, масштабируемые и надежные облачные решения.
 
-  Для реализации решений, архитектор Azure Solutions Architect сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
+  Для реализации решений, архитекторы решений Azure сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
 
-  Кандидат на получение этой сертификации должен обладать передовым опытом и знаниями по различным аспектам ИТ-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, управление данными, бюджетирование и управление - эта роль должна иметь представление о том, как принятие решений в каждой области повлияет на общее решение. Кроме того, эта роль подразумевает квалификацию как минимум в одной из следующих областей знаний Azure&#58; администрирование, разработка или DevOps.
-subTitle: Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
+  Кандидат на получение сертификата должен обладать передовым опытом и знаниями в области IT-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформу данных, бюджетирование и управление. Эта роль должна управлять и контролировать то, как решения в каждой области влияют на общее решение. Кроме того, эта роль требует обладания навыками экспертного уровня в администрировании Azure и наличия опыта работы с процессами разработки Azure и процессами DevOps.
+subTitle: «Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.»
 levels:
 - advanced
 skills:
-- Развертывание и настройка инфраструктуры
-- Внедрение рабочих нагрузок и безопасности
-- Создание и развертывание приложений
-- Внедрение аутентификации и защиты данных
-- Разработка для облачного хранилища и для службы хранилища Azure
-- Определение требований рабочей нагрузки
-- Проектирование для идентификации и безопасности
-- Проектирование решения для платформы данных
-- Разработка стратегии обеспечения непрерывности деятельности
-- Проектирование развертывания, миграции и интеграции
-- Разработка стратегии развития инфраструктуры
+- Внедрение и контроль инфраструктуры Azure
+- Внедрение решений по управлению и безопасности
+- Внедрение решений для приложений
+- Внедрение и управление платформ данных
+- Проектирование мониторинга
+- Проектирование удостоверений и безопасности
+- Разработка хранилища данных
+- Хранение проектных данных
+- Разработка инфраструктуры
 roles:
 - solution-architect
 type: role-based
@@ -77,8 +75,8 @@ paths:
 - uid: learn.architect-migration-bcdr
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJUW
 exams:
-- uid: exam.az-300
-- uid: exam.az-301
+- uid: exam.az-303
+- uid: exam.az-304
 resources:
 - title: Плакат с сертификатами Azure
   description: Ознакомьтесь с обзором, включающим основные сведения, ролевые и специальные сертификаты по Azure.
@@ -89,7 +87,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
