--- a/learn-certs-pr/courses/az-900t00.yml
+++ b/learn-certs-pr/courses/az-900t00.yml
@@ -118,12 +118,11 @@ outlineSection: |-
   - Описание стандартов конфиденциальности, соответствия и защиты данных.
 
 
-  ### Модуль 4&#58; Цены и поддержка Azure
+  ### Модуль 4&#58; Ценообразование, соглашения об уровне обслуживания (SLA) и жизненный цикл служб в Azure
   В этом модуле вы узнаете о подписках Azure, планировании и управлении затратами, вариантов поддержки, соглашениях об уровне обслуживания и жизненных циклах служб.
   #### Уроки
   - Подписки Azure
   - Планирование и управление расходами
-  - вариантов поддержки Azure
   - Azure Service Level Agreements (SLA)
   - Жизненный цикл службы в Azure
 
@@ -132,15 +131,12 @@ outlineSection: |-
 
   #### Лабораторная &#58; Пошаговое руководство&#58; Использование калькулятора TCO Azure
 
-  #### Лабораторная &#58; Пошаговое руководство&#58; Отправка запроса в службу поддержки
-
   #### Лабораторная &#58; Пошаговое руководство&#58; Вычисление составных соглашения об уровне обслуживания Azure
 
   #### Лабораторная &#58; Пошаговое руководство&#58; Доступ к функциям Azure Preview
+
   После завершения этого модуля студенты смогут следующее&#58;
   - Использование подписки Azure.
   - Планирование и управление расходами.
-  - Объяснение вариантов поддержки Azure.
   - Описание соглашения об уровне обслуживания Azure.
   - Объяснение жизненных циклов службы Azure.
-
