--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -31,14 +31,12 @@ products:
 exams:
 - uid: exam.az-900
 summary: |-
-  Этот курс предоставит базовые знания об облачных службах и о том, как эти услуги предоставляются в Microsoft Azure. Этот курс может быть выбран в качестве возможного первого шага в изучении облачных служб и Microsoft Azure, перед прохождением дополнительные курсов по Microsoft Azure или по облачным службам Microsoft.
+  Этот однодневный курс обеспечит базовые знания об облачных концепциях; основных службах Azure; безопасности, конфиденциальности, соответствии и доверии; а также о ценообразование и поддержке в Azure.
 
-  Этот курс охватывает общие концепции облачных вычислений, а также общие модели и службы облачных вычислений, такие как общедоступное, частное и гибридное облако, а также Инфраструктура как услуга (IaaS), Платформа как услуга (PaaS) и Программное обеспечение как услуга (SaaS).
-
-  Также он охватывает некоторые основные службы и решения Azure, а также ключевые службы Azure Pillar, касающиеся безопасности, конфиденциальности, соответствия требованиям и доверия. Наконец, он будет охватывать услуги ценообразования и поддержки, доступные в Azure.
+  Примечание&#58; Этот курс не является пропуском Azure и не предоставляет время для участия слушателей в практических занятиях. Если вы заинтересованы в более интерактивном практическом опыте в лаборатории, обратите внимание на курс AZ-900T00&#58; Microsoft Azure Fundamentals (2 дня), который включает в себя практические занятия под руководством инструктора. Содержание обоих курсов соответствует предметной области экзамена AZ-900.
 
   #### Профиль аудитории
-  Для прохождения этого курса не требуется никакой предварительной подготовки. Он предназначен для всех, кто хочет узнать больше о Microsoft Azure.
+  Этот курс подходит для руководителей программ и технических специалистов с общим опытом работы в сфере IT. Эти слушатели хотят узнать о наших предложениях, увидеть, как внедряются компоненты, и задать вопросы о продуктах и ​​функциях. Этот курс не является пропуском Azure и не обеспечивает время в классе, чтобы слушатели могли выполнять какие-либо практические действия. Студенты могут получить бесплатную пробную версию и следовать пошаговому руководству за пределами класса. Этот курс в основном включает лекцию и демонстрации. Этот курс поможет подготовить слушателей к экзамену AZ-900.
 prerequisitesSection: |-
   Для прохождения этого курса не требуется никакой предварительной подготовки. Технический опыт в области IT не требуется, однако некоторые общие знания или опыт в области IT могли бы быть полезны.
 outlineSection: |-
@@ -63,8 +61,7 @@ outlineSection: |-
   - Инструменты управления Azure
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Понимание основных доступных служб
-  Microsoft Azure
+  - Понимание основных доступных служб Microsoft Azure
 
   ### Модуль 3&#58; Безопасность, конфиденциальность, соответствие и доверие
   В этом модуле вы узнаете о безопасности, конфиденциальности, совместимости и доверии в Microsoft Azure.
@@ -78,16 +75,15 @@ outlineSection: |-
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Понимание следующего&#58;
-  Безопасность, конфиденциальность, соответствие и доверие в Microsoft Azure
+  безопасность, конфиденциальность, согласие и доверие с Microsoft Azure
 
-  ### Модуль 4&#58; Цены и поддержка Azure
+  ### Модуль 4&#58; Ценообразование, соглашения об уровне обслуживания (SLA) и жизненный цикл служб в Azure
   В этом модуле вы сосредоточитесь на моделях ценообразования и поддержки, доступные в Microsoft.
   #### Уроки
   - Подписки Azure
   - Планирование и управление расходами
-  - Варианты поддержки, доступные с Azure
   - Жизненный цикл службы в Azure
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Понимание ценообразования и моделей поддержки, доступных в Microsoft
+  - Понимание ценообразования и моделей жизненного цикла служб, доступных с Microsoft
 
