--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -2,14 +2,14 @@
 title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
-  description: Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
+  description: Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые понимают рекомендуемые бизнесом практики, возможности программного обеспечения и реализацию доставки, что им позволяет реализовать решения Dynamics, которые могут достигать заранее определенных целей реализации.
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
-subTitle: Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
+  Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые понимают рекомендуемые бизнесом практики, возможности программного обеспечения и реализацию доставки, что им позволяет реализовать решения Dynamics, которые могут достигать заранее определенных целей реализации.
+subTitle: Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые понимают рекомендуемые бизнесом практики, возможности программного обеспечения и реализацию доставки, что им позволяет реализовать решения Dynamics, которые могут достигать заранее определенных целей реализации.
 levels:
 - advanced
 skills:
@@ -17,6 +17,7 @@ skills:
 - Разработка компонентов решения
 - Определение стратегии тестирования и управления решениями
 roles:
+- functional-consultant
 - solution-architect
 type: role-based
 products:
