--- a/learn-certs-pr/devops-engineer.yml
+++ b/learn-certs-pr/devops-engineer.yml
@@ -2,24 +2,28 @@
 title: 'Microsoft Certified: DevOps Engineer Expert'
 metadata:
   title: 'Microsoft Certified: DevOps Engineer Expert'
-  description: 'Специалисты DevOps в Azure объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.'
+  description: Специалисты DevOps в Azure объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
 uid: certification.devops-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Специалисты DevOps в Azure объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
+  Кандидаты на сертификацию DevOps Engineer Expert должны иметь опыт работы с людьми, процессами и технологиями, чтобы постоянно приносить пользу бизнесу.
+
+  Список обязанностей в рамках этой роли включает&#58; разработку и внедрение стратегий сотрудничества, кодов и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
+
+  Кандидат на получение этой сертификации должен быть знаком как с администрированием, так и с разработкой Azure, и должен быть экспертом по крайней мере в одной из этих областей.
 subTitle: Специалисты DevOps в Azure объединяют людей, процессы и технологии для непрерывной разработки ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям.
 levels:
 - advanced
 skills:
-- Проектирование стратегии DevOps
-- Внедрение процессов разработки DevOps
-- Внедрение непрерывной интеграции
-- Внедрение непрерывной поставки
-- Внедрение управления зависимостями
-- Внедрение инфраструктуры приложений
-- Внедрение непрерывной обратной связи
+- Разработка стратегии оснащения средствами контроля
+- Разработка стратегии обеспечения надежности сайта (SRE)
+- Разработка плана обеспечения безопасности и соответствия требованиям
+- Управление системой управления версиями исходного кода
+- Облегчение общения и сотрудничества
+- Определение и реализация непрерывной интеграции
+- Определение и реализация стратегии управления непрерывной доставкой и выпуском
 roles:
 - devops-engineer
 type: role-based
@@ -57,7 +61,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
