--- a/learn-certs-pr/exams/77-419.yml
+++ b/learn-certs-pr/exams/77-419.yml
@@ -7,7 +7,7 @@ uid: exam.77-419
 displayName: 77-419
 summary: |-
   <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div><strong>Данная сертификация будет аннулирована 30 июня 2020 года. Экзамен для замены может быть доступен. Чтобы узнать больше, посетите наш блог&#58; <a href='https://www.microsoft.com/en-us/learning/community.aspx'>https://www.microsoft.com/en-us/learning/community.aspx</a> и просмотрите наши объявления об экзаменах. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени.<br/><br/></strong></div>
+  <div><strong>Этот экзамен был отменен. Для получения информации о доступных на данный момент параметрах см. страницу <a href='/learn/certifications/browse/'>"Сертификация и Экзамены"</a>.<br/><br/></strong></div>
   </div>
 
   Кандидаты на прохождение экзамена Microsoft SharePoint 2013 должны иметь четкое понимание среды SharePoint и возможность выполнения всех задач на уровне сайта. Кандидаты должны знать правила применения основных функций сайта, библиотеки и списка SharePoint 2013 и демонстрировать эти знания на практике. Кандидаты должны уметь оптимизировать и настраивать сайты SharePoint для создания структуры, решения проблем, упрощения совместной работы и повышения производительности. К соответствующим примерам относятся управление разрешениями на доступ к спискам, добавление содержимого на панель быстрого запуска, создание групповых сайтов и изменение представлений библиотеки. Экзамен рассчитан на персонал службы технической поддержки, руководителей проектов, начальников групп, руководителей отделов и других специалистов.
@@ -31,7 +31,7 @@ relatedCertifications:
 - related:
     uid: none
 resources:
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
