--- a/learn-certs-pr/exams/77-881.yml
+++ b/learn-certs-pr/exams/77-881.yml
@@ -12,20 +12,20 @@ summary: |-
 subTitle: Пользователь Microsoft Office Word 2010 базового уровня должен уметь пользоваться программным обеспечением Microsoft Office Word 2010 на функциональном уровне. Он должен знать и уметь использовать не менее 80 процентов функций и возможностей Microsoft Office Word 2010. Пользователь базового уровня должен уметь использовать Microsoft Office Word 2010 для создания и редактирования профессионально выглядящих документов для различных целей и ситуаций. Пользователи включают людей самых разных профессий и должностей почти из всех областей профессиональной, студенческой и личной жизни.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trjX
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-881&examname=Word%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-881
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
 - es
 - fr
-- it
 - ja
 - ko
 - nl
-- pt-br
 - ru
+- ar-sa
+- it
+- pt-br
 levels:
 - beginner
 skills:
