--- a/learn-certs-pr/exams/77-885.yml
+++ b/learn-certs-pr/exams/77-885.yml
@@ -12,9 +12,8 @@ summary: |-
 subTitle: Типичный кандидат на экзамен является специалистом по поддержке пользователей, преподавателем, учителем, профессором, пользователем баз данных или создателем баз данных, которому необходимо создавать или вести базовые базы данных Access. Пользователи могут создавать, изменять и расширять функциональность основных объектов базы данных, включая таблицы, запросы, формы и отчеты. Пользователи также могут создавать и изменять базовые связи между элементами баз данных и консультировать других пользователей по основным функциям и использованию Access. Пользователь Access 2010, как правило, может эффективно создавать, изменять и настраивать объекты. Этот кандидат способен самостоятельно работать над проектами баз данных и часто может отвечать на вопросы других пользователей о базах данных. Кандидаты должны уметь создавать или изменять простые базу данных Access, использовать шаблоны для создания базовых объектов и демонстрировать такие навыки на практике.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tiDl
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-885&examname=Access%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-885
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
@@ -22,6 +21,7 @@ locales:
 - ja
 - ko
 - nl
+- ar-sa
 - pt-br
 levels:
 - beginner
