--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -8,7 +8,7 @@ displayName: AZ-300
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-303">AZ-303</a>, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 29 ИЮНЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 30 сентября 2020.<br/><br/>Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА,<a href="/learn/certifications/exams/az-303">AZ-303</a>, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 29 ИЮНЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 30 сентября 2020. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен должны иметь предметный опыт в разработке и реализации решений, работающих на Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
@@ -18,6 +18,8 @@ summary: |-
   Для реализации решений, архитекторы решений Azure сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
 
   Кандидат на этот экзамен должен обладать передовым опытом и знаниями по различным аспектам ИТ-операций, в том числе по сетям, виртуализации, идентификации, безопасности, непрерывности бизнеса, аварийному восстановлению, управлению данными, бюджетированию и управлению - эта роль подразумевает понимание того, как принятие решений в каждой области повлияет на общее решение. Кроме того, эта роль подразумевает квалификацию как минимум в одной из следующих областей знаний Azure&#58; администрирование, разработка или DevOps.
+
+  <div style='font-weight&#58; bold;'><br/>Примечание&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="/learn/certifications/azure-solutions-architect">Microsoft Certified&#58; Azure Solutions Architect Expert</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: развертывание и настройка инфраструктуры; внедрение рабочих нагрузок и безопасности; создание и развертывание приложений; внедрение аутентификации и защиты данных; и разработка для облачного хранилища и для службы хранилища Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwB
@@ -31,7 +33,7 @@ locales:
 levels:
 - advanced
 skills:
-- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-303, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 29 ИЮНЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 30 сентября 2020. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-303, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 29 ИЮНЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 30 сентября 2020. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать подробную информацию об изменениях.
 - Развертывание и настройка инфраструктуры (40-45%)
 - Внедрение рабочих нагрузок и безопасности (25-30%)
 - Создание и развертывание приложений (5-10%)
@@ -82,7 +84,7 @@ paths:
 - uid: learn.architect-migration-bcdr
 relatedCertifications:
 - related:
-    uid: certification.azure-solutions-architect
+    uid: none
 resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
@@ -90,7 +92,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
