--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -7,13 +7,15 @@ uid: exam.az-400
 displayName: AZ-400
 summary: |-
   <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 15 июня 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 15 июня 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
-  Кандидаты на этот экзамен - это профессионалы DevOps, которые объединяют людей, процессы и технологии для непрерывного предоставления ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям. Профессионалы DevOps оптимизируют поставку, оптимизируя методы работы, улучшая взаимодействие и совместную работу, а также создавая автоматизацию. Они разрабатывают и венедряют стратегии для кода приложений и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
+  Кандидаты на этот экзамен должны иметь опыт работы с людьми, процессами и технологиями, чтобы постоянно приносить пользу бизнесу.
 
-  Кандидаты должны обладать навыками Agile-практик. Они должны быть знакомы с администрированием и разработкой в Azure и обладать экспертизой хотя бы в одной из этих областей. Профессионалы в Azure DevOps должны быть способны спроектировать и реализовать DevOps-практики для контроля версий, соответствия стандартами, infrastructure-as-code, управление настройкой, сборки, выпуска и тестирования, используя технологии Azure.
-subTitle: 'Этот экзамен позволяет оценить вашу способность разработать стратегию DevOps и реализовать следующее: процессы разработки DevOps; управление зависимостями; инфраструктура приложений; а также непрерывную интеграцию, доставку и обратную связь. '
+  Список обязанностей в рамках этой роли включает&#58; разработку и внедрение стратегий сотрудничества, кодов и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
+
+  Кандидат на этот экзамен должен быть знаком как с администрированием Azure, так и с разработкой, и должен быть экспертом по крайней мере в одной из этих областей.
+subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разрабатывать стратегию оснащения средствами контроля; разрабатывать стратегию обеспечения надежности сайта (SRE); разрабатывать план обеспечения безопасности и соответствия требованиям; управлять системой управления версиями исходного кода; облегчать общение и сотрудничество; определять и реализовывать непрерывную интеграцию; а также определять и реализовывать стратегию управления непрерывной доставкой и выпуском.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8d
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,14 +28,14 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена будет обновлено 15 июня 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Проектирование стратегии DevOps (20-25%)
-- Внедрение процессов разработки DevOps (20-25%)
-- Внедрение непрерывной интеграции (10-15%)
-- Внедрение непрерывной поставки (10-15%)
-- Внедрение управления зависимостями (5-10%)
-- Внедрение инфраструктуры приложений (15-20%)
-- Внедрение непрерывной обратной связи (10-15%)
+- Содержание этого экзамена было обновлено 15 июня 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Разработка стратегии оснащения средствами контроля (5-10%)
+- Разработка стратегии обеспечения надежности сайта (SRE) (5-10%)
+- Разработка плана обеспечения безопасности и соответствия требованиям (10-15%)
+- Управление системой управления версиями исходного кода (10-15%)
+- Облегчение общения и сотрудничества (10-15%)
+- Определение и реализация непрерывной интеграции (20-25%)
+- Определение и реализация стратегии управления непрерывной доставкой и выпуском (10-15%)
 roles:
 - devops-engineer
 products:
@@ -63,7 +65,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
