--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -17,7 +17,7 @@ summary: |-
 
   Инженеры Azure Security часто выступают в составе более крупной команды, занимающейся облачным управлением и безопасностью, или гибридными средами как частью сквозной инфраструктуры.
 
-  Кандидат на этот экзамен должен иметь сильные навыки в написании сценариев и автоматизации; глубокое понимание сетей, виртуализации и облачной архитектуры N-уровня; а также глубокое знакомство с облачными возможностями, продуктами и службами для Azure, а также с другими продуктами и службами Microsoft.
+  Кандидаты на этот экзамен должны обладать специальными знаниями в области написания сценариев и автоматизации, а также должен иметь глубокое понимание сетей и виртуализации. Кандидат также должен быть хорошо знаком с облачными возможностями, продуктами и службами Azure и другими продуктами и службами Microsoft.
 subTitle: 'Этот экзамен оценивает вашу способность выполнять следующие технические задачи: управление идентификацией и доступом; внедрение защиты платформы; управление операциями безопасности; и защита данных и приложений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70
@@ -68,7 +68,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
