--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -6,13 +6,16 @@ metadata:
 uid: exam.mb-700
 displayName: MB-700
 summary: |-
+  <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 28 июля 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
 
-  Архитекторы решений для приложений для финансов и операций в Microsoft Dynamics 365 являются доверенными консультантами, которые консультируются с организациями и членами группы по внедрению для того, чтобы преобразовать бизнес-потребности в четко определенное и экономически эффективное решение.
+  Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые понимают рекомендуемые бизнесом практики, возможности программного обеспечения и реализацию доставки, что им позволяет реализовать решения Dynamics, которые могут достигать заранее определенных целей реализации.
 
-  Архитектор решений несет ответственность за целостность и успешную реализацию разработки решения. Архитектор предоставляет важные рекомендации во время предпродажной подготовки и проектирования, а также консультирует на протяжении оставшейся части жизненного цикла проекта относительно решения проблем, возникающих в ходе реализации.
+  Solution Architect отвечает за целостность и успешную поставку комплексного решения. Архитектор дает важные рекомендации во время предпродажной подготовки на протяжении всего проектирования и продолжает контролировать процессы в течение оставшейся части жизненного цикла проекта для решения проблем, возникающих в ходе реализации, и обеспечения достижения целей реализации.
 
-  Архитектор решений должен обладать обширными знаниями и опытом, охватывающими потребности бизнеса и возможности продукта. Архитектор решений должен обладать широкими функциональными и техническими знаниями в качестве разработчика или функционального консультанта в одной из следующих областей&#58; Finance, Manufacturing, или Supply Chain Management. Кроме того, они обладают обширными знаниями предметной области в одной или нескольких отраслях клиентов.
+  Архитектор решений должен обладать обширными знаниями и опытом по отраслевым стандартам и возможностям продукта. Solution Architect должен иметь большим опытом как в функциональных, так и в технических областях решения Dynamics. Они должны знать о платформах, инструментах и ​​функциональных областях, таких как финансы, управление цепочками поставок и производство. Кроме того, они обладают обширными знаниями предметной области в одной или нескольких отраслях клиентов.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: определение требований решения; разработка компонентов решения; и определение стратегии тестирования решений и управления.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
@@ -22,10 +25,12 @@ locales:
 levels:
 - advanced
 skills:
+- Содержание этого экзамена будет обновлено 28 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Выявление требований решения (30-35%)
 - Разработка компонентов решения (40-45%)
 - Определение стратегии тестирования и управления решениями (25-30%)
 roles:
+- functional-consultant
 - solution-architect
 products:
 - dynamics
@@ -46,7 +51,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
