--- a/learn-certs-pr/power-platform-app-maker.yml
+++ b/learn-certs-pr/power-platform-app-maker.yml
@@ -10,8 +10,8 @@ summary: |-
 
   Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
 
-  <div><strong><br/>Примечание&#58; эта сертификация будет доступна примерно в июле 2020 года.</strong></div>
-subTitle: Эта сертификация будет доступна примерно в июле 2020 года. Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
+  <div><strong><br/>Примечание&#58; эта сертификация будет доступна 17 июля 2020 года или около того.</strong></div>
+subTitle: Эта сертификация будет доступна 17 июля 2020 года или около того. Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
 levels:
 - intermediate
 skills:
@@ -69,7 +69,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
