--- a/learn-certs-pr/courses/pl-900t00.yml
+++ b/learn-certs-pr/courses/pl-900t00.yml
@@ -34,32 +34,31 @@ prerequisitesSection: |-
   Для этого курса нет предварительных условий
 outlineSection: |-
   ### Модуль 1&#58; Введение в Power Platform
-  Узнайте о компонентах Power Platform, способах подключения данных и о том, как организации могут использовать эту технологию
+  Узнайте о компонентах Power Platform, способах подключения данных и о том, как организации могут использовать эту технологию для создания бизнес-решений.
   #### Уроки
   - Обзор Power Platform
   - Краткое содержание модуля
 
-  Изучите компоненты и возможности Power Platform
+  После завершения этого модуля студенты смогут следующее&#58;
   - Определите, когда использовать каждое компонентное приложение Power Platform для создания бизнес-решений.
   - Узнайте, как использовать Power Platform для создания бизнес-решений.
+  - Изучите компоненты и возможности Power Platform
 
   ### Модуль 2&#58; Начните использовать приложения Power Apps
   Узнайте о значении и возможностях PowerApps и о том, как другие организации используют эту технологию для создания простых приложений для своего бизнеса.
   #### Уроки
   - Обзор приложений Power Apps
   - Как создать решение для приложения
-
-
-  #### Лабораторная &#58; Как создать базовое приложение Canvas 1
   - Создать приложение Staff Canvas
   - Завершите приложение
 
   #### Лабораторная &#58; Как создать базовое приложение Canvas 2
   - Создать приложение Security Canvas
 
-  Узнайте о том, что Power Apps и его ценность для бизнеса
+  После завершения этого модуля студенты смогут следующее&#58;
   - Узнайте, как другие организации оцифровывают свои процессы с помощью Power Apps
   - Посмотрите на Power Apps в действии и изучайте варианты создания своего первого приложения
+  - Узнайте о том, что Power Apps и его ценность для бизнеса
 
 
   ### Модуль 3&#58; Введение в общую службу данных Common Data Service
@@ -74,9 +73,10 @@ outlineSection: |-
   - Создайте сущности и отношения
   - Импортируйте данные
 
-  Объясните, какие среды, объекты, поля и отношения находятся в общей службе данных
+  После завершения этого модуля студенты смогут следующее&#58;
   - Опишите разницу между службой Common Data Service и моделью Common Data Model
   - Объясните варианты использования и ограничения бизнес-правил и процессов
+  - Объясните, какие среды, объекты, поля и отношения находятся в общей службе данных
 
 
   ### Модуль 4&#58; Начните использовать приложения Power Automate
@@ -90,9 +90,10 @@ outlineSection: |-
   - Создайте поток уведомлений о посещениях
   - Создайте поток развертки безопасности
 
-  Узнайте о коммерческой ценности и возможностях Power Automate
+  После завершения этого модуля студенты смогут следующее&#58;
   - Посмотрите, как Power Automate работает и выглядит с точки зрения пользователя
   - Создайте простой поток
+  - Узнайте о коммерческой ценности и возможностях Power Automate
 
 
   ### Модуль 5&#58; Начните использовать приложения Power BI
@@ -103,7 +104,9 @@ outlineSection: |-
 
 
   #### Лабораторная &#58; Создайте отчёт Power BI
-  Опишите коммерческую ценность и возможности Power BI
+
+  После завершения этого модуля студенты смогут следующее&#58;
   - Посмотрите, как Power BI работает и выглядит с точки зрения пользователя
   - Узнайте, как создать простую панель управления Power BI
+  - Опишите коммерческую ценность и возможности Power BI
 
