--- a/learn-certs-pr/exams/77-418.yml
+++ b/learn-certs-pr/exams/77-418.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: От кандидатов базового уровня, намеревающихся сдать экзамен по Microsoft Word 2013, требуются знания основ работы в среде Word и способность самостоятельно выполнять задачи. Кандидаты должны знать правила применения основных функций Word 2013 и продемонстрировать эти знания на практике. Эти кандидаты должны уметь создавать и редактировать документы из 2-3 страниц для различных целей и ситуаций. Примерами могут служить отчеты, информационные бюллетени с несколькими колонками, анкеты и деловые письма, оформленные на профессиональном уровне. Экзамен рассчитан на учащихся, конторских работников, преподавателей и представителей других профессий.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJC
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-418&examname=Word%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-418
 locales:
 - en
 - zh-cn
@@ -28,6 +28,8 @@ locales:
 - pl
 - pt-br
 - ru
+- ar-sa
+- el-gr
 levels:
 - beginner
 skills:
@@ -44,7 +46,7 @@ relatedCertifications:
 - related:
     uid: certification.microsoft-office-specialist-certification-2013
 resources:
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
