--- a/learn-certs-pr/exams/77-727.yml
+++ b/learn-certs-pr/exams/77-727.yml
@@ -8,12 +8,12 @@ displayName: 77-727
 summary: |+
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
 
-  Успешные кандидаты на сертификационный экзамен Microsoft Office Specialist Excel 2016 имеют фундаментальное понимание среды Excel и возможность самостоятельно выполнять задания. Кандидаты должны знать правила применения основных функций Excel 2016 и демонстрировать эти знания на практике. Кандидаты должны уметь создавать и редактировать книги, состоящие из нескольких листов, и использовать графические элементы для визуального представления данных. Примеры рабочей книги включают бюджеты профессионального уровня, финансовые отчеты, диаграммы производительности групп, счета-фактуры на продажу и журналы ввода данных.
+  Успешные кандидаты на сертификационный экзамен Microsoft Office Specialist Excel 2016 имеют фундаментальное понимание среды Excel и возможность самостоятельно выполнять задания. Кандидаты должны знать правила применения основных функций Excel 2016 и демонстрировать эти знания на практике. Кандидаты должны уметь создавать и редактировать книги, состоящие из нескольких листов, и использовать графические элементы для визуального представления данных. В качестве примеров книг можно привести профессионально оформленные сметы, финансовые балансы, диаграммы контроля производительности труда рабочей группы, накладные по заказам на продажу и журналы данных.
 
   В целях более тщательной проверки знаний кандидата, его способностей и навыков владения программами MOS 2016 сертификационные экзамены Microsoft Office Specialist (MOS) 2016 проводятся в новом формате&#58;
   - в отличие от предыдущих версий инструкции к экзамену MOS 2016, как правило, не содержат названия команд. Например, названия функций не указываются и заменяются дескрипторами. Это означает, что для успешного выполнения задач по каждому проекту кандидаты должны знать назначение и основные сценарии использования функций программ.
   - Экзамен MOS 2016 включает в себя несколько проектов.
-subTitle: Успешные кандидаты на сертификационный экзамен Microsoft Office Specialist Excel 2016 имеют фундаментальное понимание среды Excel и возможность самостоятельно выполнять задания. Кандидаты должны знать правила применения основных функций Excel 2016 и демонстрировать эти знания на практике. Кандидаты должны уметь создавать и редактировать книги, состоящие из нескольких листов, и использовать графические элементы для визуального представления данных. Примеры рабочей книги включают бюджеты профессионального уровня, финансовые отчеты, диаграммы производительности групп, счета-фактуры на продажу и журналы ввода данных.
+subTitle: Успешные кандидаты на сертификационный экзамен Microsoft Office Specialist Excel 2016 имеют фундаментальное понимание среды Excel и возможность самостоятельно выполнять задания. Кандидаты должны знать правила применения основных функций Excel 2016 и демонстрировать эти знания на практике. Кандидаты должны уметь создавать и редактировать книги, состоящие из нескольких листов, и использовать графические элементы для визуального представления данных. В качестве примеров книг можно привести профессионально оформленные сметы, финансовые балансы, диаграммы контроля производительности труда рабочей группы, накладные по заказам на продажу и журналы данных.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3XVfJ
 providers:
@@ -31,7 +31,6 @@ locales:
 - it
 - ja
 - ko
-- nb
 - nl
 - pl
 - pt-br
