--- a/learn-certs-pr/exams/77-884.yml
+++ b/learn-certs-pr/exams/77-884.yml
@@ -12,20 +12,20 @@ summary: |-
 subTitle: Кандидаты должны уметь форматировать содержимое сообщения электронной почты с помощью форматирования символов и абзацев, создавать или вставлять графические элементы, такие как диаграммы, таблицы и графические элементы SmartArt в сообщения. Они также должны уметь отправлять сообщения частным получателям, используя поля "Скрытая копия". Кандидаты должны уметь создавать записи контактов, задач и встреч из входящих сообщений, а также создавать группы контактов для обеспечения связи с другими пользователями Outlook. Кроме того, они должны уметь обмениваться сведениями о расписании с другими пользователями Outlook. Кандидаты должны уметь планировать собрания с участием людей и использованием системных ресурсов, а также делегировать задачи. Базовые пользователи выполняют персонализацию окна программы Outlook и панели быстрого доступа для обеспечения максимальной эффективности. Они организуют сообщения и другие элементы Outlook, а также выбирают различные режимы просмотра почтовых папок и календаря, адресной книги и списка задач. Кроме того, они могут отображать несколько календарей и обмениваться календарями с другими пользователями Outlook.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toWg
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-884&examname=Outlook%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-884
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
 - es
 - fr
-- it
 - ja
 - ko
 - nl
-- pt-br
 - ru
+- ar-sa
+- it
+- pt-br
 levels:
 - beginner
 skills:
