--- a/learn-certs-pr/exams/77-887.yml
+++ b/learn-certs-pr/exams/77-887.yml
@@ -12,18 +12,18 @@ summary: |-
 subTitle: Пользователи Microsoft Word 2010 экспертного уровня могут уверенно использовать программное обеспечение Word 2010 на функциональном уровне. Пользователи экспертного уровня работают с расширенными функциями Word 2010 для улучшения профессиональных документов, создания документов, готовых к публикации, и обеспечения эффективной совместной работы над проектами группового редактирования. Пользователи экспертного уровня изменяют параметры Word, чтобы настроить свою среду для удовлетворения различных потребностей и повышения производительности.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tiy7
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=77-887&examname=Word%202010%20Expert&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-887
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
 - es
 - fr
-- it
 - ja
 - ko
 - nl
+- ar-sa
+- it
 - pt-br
 levels:
 - beginner
