--- a/learn-certs-pr/exams/98-349.yml
+++ b/learn-certs-pr/exams/98-349.yml
@@ -14,7 +14,9 @@ summary: |-
 subTitle: Кандидаты на прохождение этого экзамена должны знать базовые понятия в отношении операционной системы Windows в среде Windows 10.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tiy8
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-349&examname=Windows%20Operating%20System%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-349
+providers:
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -47,8 +49,8 @@ relatedCertifications:
 - related:
     uid: certification.mta-windows-operating-system-fundamentals
 resources:
-- title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
