--- a/learn-certs-pr/exams/98-361.yml
+++ b/learn-certs-pr/exams/98-361.yml
@@ -12,7 +12,11 @@ summary: |-
 subTitle: Целью этого экзамена является подтверждение базового уровня умений в области разработки программного обеспечения. Кандидатам рекомендуется изучить теоретические основы представленных здесь технологий и приобрести практический опыт работы с ними либо с помощью соответствующих учебных курсов, либо самостоятельно с помощью учебных пособий и примеров, представленных на сайте MSDN и входящих в состав Microsoft Visual Studio. Предполагается наличие опыта работы с C# или Microsoft Visual Basic .NET.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tfIO
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-361&examname=Software%20Development%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-361
+providers:
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-361&examname=Software%20Development%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-361
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -47,8 +51,8 @@ relatedCertifications:
 - related:
     uid: certification.mta-software-development-fundamentals
 resources:
-- title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
