--- a/learn-certs-pr/exams/98-364.yml
+++ b/learn-certs-pr/exams/98-364.yml
@@ -12,7 +12,11 @@ summary: |-
 subTitle: Цель этого экзамена — подтвердить начальные знания и навыки для работы с базами данных, включая реляционные базы данных, такие как Microsoft SQL Server. Кандидатам рекомендуется изучить теоретические основы представленных здесь технологий и приобрести практический опыт работы с ними либо с помощью соответствующих учебных курсов, либо самостоятельно с помощью учебных пособий и примеров, представленных на сайте MSDN и входящих в состав Microsoft Visual Studio. Хотя рекомендуется иметь минимальный практический опыт работы с данными технологиями, наличие опыта работы для этих экзаменов не предполагается.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJq
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-364&examname=Database%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-364
+providers:
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-364&examname=Database%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-364
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -30,8 +34,8 @@ levels:
 - beginner
 skills:
 - Понимание основных концепций баз данных (20-25%)
-- Создание объектов базы данных (20-25%)
-- манипуляции данных (25-30%)
+- Создание объектов базы данных (20–25%)
+- манипуляции данных (25–30%)
 - Понимание Хранение данных (15-20%)
 - Администрирование базы данных (10-15%)
 roles:
@@ -42,10 +46,10 @@ courses:
 - uid: course.40364
 relatedCertifications:
 - related:
-    uid: certification.mta-database-fundamentals
+    uid: none
 resources:
-- title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
