--- a/learn-certs-pr/exams/98-365.yml
+++ b/learn-certs-pr/exams/98-365.yml
@@ -14,7 +14,11 @@ summary: |-
 subTitle: Кандидаты на прохождение этого экзамена знакомы с понятиями и технологиями администрирования Windows Server. Экзамен рассчитан на кандидатов, имеющих опыт практической работы с Windows Server, сетями на платформе Windows, Active Directory, средствами управления учетными записями и средствами восстановления системы.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trjL
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-365&examname=Windows%20Server%20Administration%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-365
+providers:
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?action=1&locale=ru-ru&examcode=98-365&examname=Windows%20Server%20Administration%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-365
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -45,8 +49,8 @@ relatedCertifications:
 - related:
     uid: certification.mta-windows-server-administration-fundamentals
 resources:
-- title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
