--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -8,14 +8,19 @@ displayName: AZ-303
 summary: |-
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
 
-  Кандидатами на этот экзамен являются архитекторы решений Azure, которые консультируют заинтересованные стороны и преобразуют бизнес-требования в безопасные, масштабируемые и надежные решения. Кандидаты должны обладать передовым опытом и знаниями в области IT-операций, включая сетевое взаимодействие, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформу данных, бюджетирование и управление. Эта роль требует управления тем, как решения в каждой области влияют на общее решение.
+  Кандидаты на этот экзамен должны иметь предметный опыт в разработке и реализации решений, работающих на Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
 
-  Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps.
+  В обязанности архитектора решений Azure входит консультирование заинтересованных сторон и перевод требований бизнеса в безопасные, масштабируемые и надежные облачные решения.
 
-  <div style='red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; Этот экзамен станет доступен ориентировочно 29 июня 2020 года.</div>
+  Для реализации решений, архитекторы решений Azure сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
+
+  Кандидаты должны обладать передовым опытом и знаниями в области IT-операций, включая сетевое взаимодействие, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформу данных, бюджетирование и управление - эта роль требует управления тем, как решения в каждой области влияют на общее решение. Кроме того, эта роль требует обладания навыками экспертного уровня в администрировании Azure и наличия опыта работы с процессами разработки Azure и процессами DevOps.
+
+  <div style='font-weight&#58; bold;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: внедрение и контроль инфраструктуры Azure; внедрение решений по управлению и безопасности; внедрение решений для приложений; и внедрение и управление платформ данных.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4psD6
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-303&examname=Exam%20AZ-303:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-303
 locales:
 - en
 levels:
@@ -29,9 +34,13 @@ roles:
 - solution-architect
 products:
 - azure
+exams:
+- uid: exam.az-304
+courses:
+- uid: course.az-303t00
 relatedCertifications:
 - related:
-    uid: none
+    uid: certification.azure-solutions-architect
 resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
@@ -39,7 +48,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
