--- a/learn-certs-pr/exams/dp-201.yml
+++ b/learn-certs-pr/exams/dp-201.yml
@@ -5,7 +5,17 @@ metadata:
   description: 'Exam DP-201: Designing an Azure Data Solution'
 uid: exam.dp-201
 displayName: DP-201
-summary: "<div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>  \r\n  \r\nКандидатами на этот экзамен являются инженеры по работе с данными Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для проектирования решений по работе с данными, использующих службы данных Azure.\r\n\r\nИнженеры данных Azure отвечают за задачи, проектных связанные с данными, включая разработку решений для хранения данных Azure, использующих реляционные и нереляционные хранилища данных, решения для пакетной обработки данных и обработки данных в реальном времени, а также решения для обеспечения безопасности и соответствия требованиям.\r\n\r\nКандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure."
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 31 июля 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
+  Кандидатами на этот экзамен являются инженеры по работе с данными Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для проектирования решений по работе с данными, использующих службы данных Azure.
+
+  Инженеры данных Azure отвечают за задачи, проектных связанные с данными, включая разработку решений для хранения данных Azure, использующих реляционные и нереляционные хранилища данных, решения для пакетной обработки данных и обработки данных в реальном времени, а также решения для обеспечения безопасности и соответствия требованиям.
+
+  Кандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos SQL, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разработка решений для хранения данных Azure; решения для обработки проектных данных; и проектирование для обеспечения безопасности данных и соответствия требованиям.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRMb
@@ -19,6 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено 31 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Разработка решений для хранения данных Azure (40-45%)
 - Решения для обработки проектных данных (25-30%)
 - Проектирование для обеспечения безопасности данных и соответствия требованиям (25-30%)
